tests/miniJava/neg/000087_mutation.MiniJava
class java { public class void Main ( String [ ] java ) { { } } }
